Crt terminal theme, rating, reformat.

--- a/index.html
+++ b/index.html
@@ -21,24 +21,10 @@ href="https://webneko.net">Neko</a></h1>
                 <p>Kirito139 · roguewielder</p>
                 <p>San Francisco, CA<p>
                 <p>Email: lenniermulder [at] icloud [dot] com</p>
-        <p>Geek Code v3.12: GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP? t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y</p>
-        <p>Swatch time:
-        <span id="mySwatchClock"></span>
-        <script>
-            var mySwatchClock = document.getElementById('mySwatchClock');
-            function updateSwatchClock() {
-                mySwatchClock.innerHTML = '@' + GetSwatchTime();
-            }
-            setInterval(updateSwatchClock, 864)
-        </script>
-        </p>
-        <p>I'm feeling<a href="https://www.imood.com/users/kirito139"><img src="https://moods.imood.com/display/uname-kirito139/fg-FFCC02/bg-282828/trans-1/imood.gif" alt="The current mood of kirito139 at www.imood.com" border="0"></a></p>
-                <p>Welcome to my little corner of the internet! Feel free to look around, it's pretty empty right now but I'll probably add more... eventually. This site was made with the help of a large dose of procrastination.</p>
-                <p> This site rated: <a href="http://www.mabsland.com/Adoption.html">
-                    <img alt="Site not yet rated" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/Censor_NYRc.gif">
-                </a></p>
-                <p> About me: I'm Class of '27 at Lowell HS, and I run on the XC/TF teams (though I'm currently dealing with shin splints <img style="display: inline;" alt="sigh" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/purple_sigh.gif"> ). I code in python (preferred) and java.</p>
-                <img alt="Under heavy construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/pipipelinehalfpipe1038CONSTRUCTION.gif">
+        <p>Geek Code v3.12: GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W+++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP? t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y</p>
+                <img alt="Under construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/AtAthensRhodes1319bookconstruction.gif">
+                <p>Welcome to my little corner of the internet. Enjoy your stay!</p>
+                <p> About me: I'm Class of '27 at Lowell HS, and I run on the XC/TF teams (though I'm currently dealing with shin splints <img style="display: inline;" alt="phpBB3_sad" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/phpBB2/icon_sad.gif"> ). I code in python (preferred) and java.</p>
                 <pre>
 'TWAS THE NIGHT BEFORE IMPLEMENTATION
 author unkown
@@ -96,14 +82,31 @@ And the client exclaimed with a snarl and a taunt
             </main>
         </div>
         <div class="sidebar">
-            <iframe class="strava-widget"
+            <!-- <iframe class="strava-widget"
                     height='454'
                     width='300'
                     frameborder='0'
                     allowtransparency='true'
                     scrolling='no'
                     src='https://www.strava.com/athletes/134681589/latest-rides/1400cf29fec20dcea41557ff8fcaac0fa2b51402'>
-            </iframe>
+            </iframe> -->
+            <p>Swatch time:
+            <a href="https://wiki.melonland.net/swatch_time" style="color: inherit; text-decoration: none;">
+                <span id="mySwatchClock"></span>
+                <script>
+                    var mySwatchClock = document.getElementById('mySwatchClock');
+                    function updateSwatchClock() {
+                        mySwatchClock.innerHTML = '@' + GetSwatchTime();
+                    }
+                    setInterval(updateSwatchClock, 864)
+                </script>
+            </a>
+            <br>
+            I'm feeling<a href="https://www.imood.com/users/kirito139"><img src="https://moods.imood.com/display/uname-kirito139/fg-FFCC02/bg-282828/trans-1/imood.gif" alt="The current mood of kirito139 at www.imood.com" border="0"></a>
+            </p>
+            <a href="https://www.mabsland.com/Adoption.html">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/images/Censor_NYRb.gif" alt="Site not yet rated.">
+            </a>
             <iframe class="lastfm-widget"
                     src="https://kirito139.github.io/lastfm_now_playing/index.html" 
                     allowtransparency="true"
@@ -116,7 +119,7 @@ And the client exclaimed with a snarl and a taunt
     </div>
     <footer>
         <p>Webrings!</p>
-        <div id="webring-wrapper">
+        <div id="webring-wrapper" style="text-decoration: none;">
             <a href="https://webring.hackclub.com/" id="previousBtn" class="webring-anchor" title="Previous">‹</a>
             <a href="https://webring.hackclub.com/" class="webring-logo" title="Hack Club Webring" alt="Hack Club Webring"></a>
             <a href="https://webring.hackclub.com/" id="nextBtn" class="webring-anchor" title="Next">›</a>
@@ -133,28 +136,37 @@ And the client exclaimed with a snarl and a taunt
            <img usemap="#badge-geekring" src="http://geekring.net/banner/geek_2.gif" alt="The Geekring">
         </div>
         <p> Cool sites!</p>
-        <div id="cool-sites">
-            <a href="https://tertiaryapocalypse.neocities.org">
+        <div id="cool-sites" style="text-decoration: none;">
+            <a href="https://tertiaryapocalypse.neocities.org" style="text-decoration: none;">
                 <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/tertiaryapocalypse.png" alt="tertiaryapocalypse site button">
             </a>
+            <a href="https://nano.lgbt/"><img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/nano.png" style="text-decoration: none;"></a>
+            <a href="https://dimden.dev/"><img src="https://dimden.dev/services/images/88x31.gif"></a>
+            <p>
+            <a href="https://web.archive.org/web/20241003071517/https://leia.pages.gay/" style="color: inherit;">leia_uwu's homepage (archive link, she took the site down :( )</a>
+            </p>
         </div>
         <p>Buttons!</p>
-        <div class="88x31">
+        <div class="88x31"  style="text-decoration: none;">
+            <!-- Site not yet rated -->
+            <a href="http://www.mabsland.com/Adoption.html">
+                <img alt="Site not yet rated" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/Censor_NYRc.gif">
+            </a>
             <!-- Anything But Windows -->
             <img alt="Anything But Window Badge" title="F*** microsoft" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/anythingbutwindows.gif">
 
             <!-- uBlock Origin NOW -->
-            <a title="uBlock Origin NOW" referrerpolicy="no-referrer" href="https://github.com/gorhill/uBlock">
+            <a title="uBlock Origin NOW" referrerpolicy="no-referrer" href="https://github.com/gorhill/uBlock" style="text-decoration: none;">
                 <img alt="uBlock Origin Badge" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/ublock.png">
             </a>
 
             <!-- Firefox NOW -->
-            <a title="Firefox NOW" referrerpolicy="no-referrer" href="https://firefox.com">
+            <a title="Firefox NOW" referrerpolicy="no-referrer" href="https://firefox.com" style="text-decoration: none;">
                 <img alt="Firefox Badge" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/firefox.png">
             </a>
 
             <!-- Anything but chrome -->
-            <a title="Anything but chrome" referrerpolicy="no-referrer" href="https://contrachrome.com/">
+            <a title="Anything but chrome" referrerpolicy="no-referrer" href="https://contrachrome.com/" style="text-decoration: none;">
                 <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/chrome.png" alt="Anything but chrome">
             </a>
 
@@ -162,12 +174,12 @@ And the client exclaimed with a snarl and a taunt
             <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/latex.gif" alt="True nerds type in LaTeX">
 
             <!-- textfile directory -->
-            <a title="textfile directory" referrerpolicy="no-referrer" href="http://textfiles.com">
+            <a title="textfile directory" referrerpolicy="no-referrer" href="http://textfiles.com" style="text-decoration: none;">
                 <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/textfile.gif" alt="textfiles.com">
             </a>
 
             <!-- Questionable Content -->
-            <a title="Questionable Content" referrerpolicy="no-referrer" href="https://www.questionablecontent.net">
+            <a title="Questionable Content" referrerpolicy="no-referrer" href="https://www.questionablecontent.net" style="text-decoration: none;">
                 <img style="width: 88px; height: 31px;" src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/Tokyo_Teahouse_2932_buttons_questionablecontent.gif" alt="Questionable Content">
             </a>
 
@@ -175,7 +187,7 @@ And the client exclaimed with a snarl and a taunt
             <img style="width: 88px; height: 31px;" src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/claymatecarly_calvin.gif" alt="Calvin & Hobbes">
 
             <!-- Vim -->
-            <a title="Vim" referrerpolicy="no-referrer" href="https://www.vim.org">
+            <a title="Vim" referrerpolicy="no-referrer" href="https://www.vim.org" style="text-decoration: none;">
                 <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/vim.vialle.love.anim.gif" alt="Vim">
             </a>
 
@@ -183,7 +195,7 @@ And the client exclaimed with a snarl and a taunt
             <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/google_stand.gif" alt="Fight Google">
 
             <!-- DHMO -->
-            <a title="DHMO" referrerpolicy="no-referrer" href="https://dhmo.org">
+            <a title="DHMO" referrerpolicy="no-referrer" href="https://dhmo.org" style="text-decoration: none;">
                 <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/dhmobanner1.gif" alt="DHMO">
             </a>
 
@@ -194,8 +206,8 @@ And the client exclaimed with a snarl and a taunt
             <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/Area51_Cavern_1263_tna3.gif" alt="Atheist">
 
             <!-- Internet Archive -->
-            <a title="Internet Archive" referrerpolicy="no-referrer" href="https://archive.org">
-                <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/preserve.gif" alt="archive.org">
+            <a title="Internet Archive" referrerpolicy="no-referrer" href="https://archive.org" style="text-decoration: none;">
+                <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/archive.gif" alt="archive.org">
             </a>
 
             <!-- Made on a Mac -->
@@ -214,7 +226,7 @@ And the client exclaimed with a snarl and a taunt
             <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/88x31.png" alt="88x31">
 
             <!-- chrome is evil -->
-            <a title="Anything but chrome" referrerpolicy="no-referrer" href="https://contrachrome.com/">
+            <a title="Anything but chrome" referrerpolicy="no-referrer" href="https://contrachrome.com/" style="text-decoration: none;">
                 <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/chrome2.gif" alt="Google Chrome is EVIL!">
             </a>
 
@@ -222,7 +234,7 @@ And the client exclaimed with a snarl and a taunt
             <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/computer.png" alt="Get a computer NOW!">
 
             <!-- DOOM -->
-            <a title="DOOM" referrerpolicy="no-referrer" href="https://playclassic.games/games/first-person-shooter-dos-games-online/play-doom-online/play/">
+            <a title="DOOM" referrerpolicy="no-referrer" href="https://playclassic.games/games/first-person-shooter-dos-games-online/play-doom-online/play/" style="text-decoration: none;">
                 <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/doom.png" alt="Play DOOM!">
             </a>
 
@@ -233,7 +245,7 @@ And the client exclaimed with a snarl and a taunt
             <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/ilikecomputer.png" alt="I like computer">
 
             <!-- Internet archive -->
-            <a title="Internet Archive" referrerpolicy="no-referrer" href="https://archive.org">
+            <a title="Internet Archive" referrerpolicy="no-referrer" href="https://archive.org" style="text-decoration: none;">
                 <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/internetarchive.png" alt="Internet Archive">
             </a>
 
@@ -244,7 +256,7 @@ And the client exclaimed with a snarl and a taunt
             <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/phonechump.gif" alt="Don't be a phone chump. Get a computer NOW!">
 
             <!-- ruffle -->
-            <a title="Ruffle" referrerpolicy="no-referrer" href="https://ruffle.rs">
+            <a title="Ruffle" referrerpolicy="no-referrer" href="https://ruffle.rs" style="text-decoration: none;">
                 <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/ruffle.png" alt="Ruffle">
             </a>
 
@@ -252,7 +264,7 @@ And the client exclaimed with a snarl and a taunt
             <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/sameshit.gif" alt="Same shit different asshole">
 
             <!-- spotify -->
-            <a title="Reasons apple music is better" referrerpolicy="no-referrer" href="https://techpenny.com/reasons-apple-music-better-than-spotify/">
+            <a title="Reasons apple music is better" referrerpolicy="no-referrer" href="https://techpenny.com/reasons-apple-music-better-than-spotify/" style="text-decoration: none;">
                 <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/shitify.gif" alt="Get Apple Music instead!">
             </a>
 
@@ -263,12 +275,14 @@ And the client exclaimed with a snarl and a taunt
             <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/windows.png" alt="Windows NO!">
 
             <!-- xkcd -->
-            <a title="xkcd" referrerpolicy="no-referrer" href="https://xkcd.com">
+            <a title="xkcd" referrerpolicy="no-referrer" href="https://xkcd.com" style="text-decoration: none;">
                 <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/xkcd.png" alt="xkcd">
             </a>
 
         </div>
-        <p>© 2024 Lennier Mulder · <a href="changelog.html" style="color: inherit; text-decoration: none; display: inline-block;">Changelog</a>
+        <p>This site was made using raw html, css, and javascript with the help of <a href="https://perplexity.com" style="color: inherit;">Perplexity</a> and a large dose of procrastination.</p>
+        <p>·</p>
+        <p><a href="changelog.html" style="color: inherit; text-decoration: none; display: inline-block;">Changelog</a>
         </p>
     </footer>
 </body>
