--- a/changelog.html
+++ b/changelog.html
@@ -7,6 +7,7 @@
     <body>
         <pre style="word-wrap: break-word; white-space: pre-wrap;">
         # Changelog
+        [v0.1.8] - November 14, 2024: Changed background to pure black, text to terminal green. Removed Strava widget. Made swatch clock link to source. Add crt overlay. Cool sites added: dimden, leia_uwu, nano. Update geek code, fix preserve button. Reformat footer, remove copyright. Move swatch time and imood to sidebar. Add site rating image in sidebar.
         [v0.1.7] - November 6, 2024: Change to amber theme and add site rating button (currently not yet rated).
         [v0.1.6] - November 5, 2024: Disabled antialiasing for images in body, added imood and swatch time. Also added cool sites section. Created index.js file.
         [v0.1.5] - November 3, 2024: Removed boba manor, added geekring button. Changed to green retro terminal inspired colorscheme but left passable christams colors in comments in case I ever want to switch back. Added night before implementation poem, changed english header font to Terminess Nerd Font and chinese header font to Zpix, body font to ProggyClean Nerd Font, pre font to GohuFont uni11 Nerd Font(currently just the night before implementation poem uses this) and footer font to Silkscreen. Also added a smilies emoticon, and moved underconstruction sign to right before poem, after about me.
