Underline changelog link

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ And the client exclaimed with a snarl and a taunt
         </div>
         <p>This site was made using raw html, css, and javascript with the help of <a href="https://perplexity.com" style="color: inherit;">Perplexity</a> and a large dose of procrastination.</p>
         <p>·</p>
-        <p><a href="changelog.html" style="color: inherit; text-decoration: none; display: inline-block;">Changelog</a>
+        <p><a href="changelog.html" style="color: inherit;">Changelog</a>
         </p>
     </footer>
 </body>
