--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@ href="https://webneko.net">Neko</a></h1>
             <header>
                 <h1>Lennier Mulder</h1>
                 <p style = "font-size: 22px;">朱晓瑞</p>
+                <p style="font-family: var(--main-font);">Kirito139 · roguewielder</p>
+                <p style="font-family: var(--main-font);">San Francisco, CA</p>
+                <a href="mailto:lenniermulder@icloud.com" style="align-self: center; text-decoration: none; color: inherit;"><img alt="Email" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/mail.png"></a>
             </header>
             <main>
-                <p>Kirito139 · roguewielder</p>
-                <p>San Francisco, CA<p>
-                <p>Email: lenniermulder [at] icloud [dot] com</p>
-        <p>Geek Code v3.12: GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W+++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP? t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y</p>
-                <img alt="Under construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/AtAthensRhodes1319bookconstruction.gif">
+                <p style="text-align: center;">Geek Code v3.12:<br>GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W+++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP? t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y</p>
+        <!-- <img alt="Under construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/AtAthensRhodes1319bookconstruction.gif"> -->
                 <p>Welcome to my little corner of the internet. Enjoy your stay!</p>
-                <p> About me: I'm Class of '27 at Lowell HS, and I run on the XC/TF teams (though I'm currently dealing with shin splints <img style="display: inline;" alt="phpBB3_sad" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/phpBB2/icon_sad.gif"> ). I code in python (preferred) and java.</p>
+                <p> Quick facts: <br> - Lowell HS Class of '27 <br> - Sports: XC/TF (currently dealing with shin splints <img style="display: inline;" alt="phpBB3_sad" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/phpBB2/icon_sad.gif"> ). <br> - Languages I know: English/Python (preferred), <a style="text-decoration: none; font-family: 'Zpix'; font-size: 12px;">中文</a>/Java (not preferred). <br> - I read a lot of SF/F, my favorite books are the <u>Stormlight Archive</u> by Brandon Sanderson and <u>Neuromancer</u> by William Gibson. <br> - I listen to a lot of metal, industrial, darkwave, etc. plus a smattering of other random stuff. </p>
+                <br>
                 <pre>
 'TWAS THE NIGHT BEFORE IMPLEMENTATION
 author unkown
@@ -103,6 +104,8 @@ And the client exclaimed with a snarl and a taunt
             </a>
             <br>
             I'm feeling<a href="https://www.imood.com/users/kirito139"><img src="https://moods.imood.com/display/uname-kirito139/fg-FFCC02/bg-282828/trans-1/imood.gif" alt="The current mood of kirito139 at www.imood.com" border="0"></a>
+            <br>
+            Sign my <a href="kirito139.atabook.org" style="color: inherit;">guestbook!</a>
             </p>
             <a href="https://www.mabsland.com/Adoption.html">
                 <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/images/Censor_NYRb.gif" alt="Site not yet rated.">
@@ -198,6 +201,46 @@ And the client exclaimed with a snarl and a taunt
             <!-- Star Wars Fanatic -->
             <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/Area51_Cavern_3008_swfanatic.gif" alt="Star Wars!">
 
+            <!-- encounter an alien! -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/alienencounter.gif" alt="encounter an alien!">
+
+            <!-- bestvwmonitor.gif -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/bestvwmonitor.gif" alt="This page is best viewed with a computer and a monitor">
+
+            <!-- bookmark_this_page.gif -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/bookmark_this_page.gif" alt="Bookmark this page!">
+
+            <!-- greensmilies.gif -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/greensmilies.gif" alt="green smilies">
+
+            <!-- Hack Club -->
+            <a title="Hack Club" referrerpolicy="no-referrer" href="https://hackclub.com" style="text-decoration: none;">
+                <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/hackclub.png" alt="Hack Club">
+            </a>
+
+            <!-- lol -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/lol.gif" alt="LOL">
+
+            <!-- no drugs -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/nodrugs.gif" alt="no drugs">
+
+            <!-- paywalls -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/paywalls.png" alt="paywalls gatekeep knowledge">
+
+            <!-- powered_by_mouse_wheel.gif -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/powered_by_mouse_wheel.gif" alt="powered by a mouse in a wheel">
+
+            <!-- slashdot -->
+            <a title="Slashdot" referrerpolicy="no-referrer" href="https://slashdot.org" style="text-decoration: none;">
+                <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/slashdot.gif" alt="Slashdot">
+            </a>
+
+            <!-- apocalypse NOW! -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/apocalypseNOW.gif" alt="apocalypse NOW!">
+
+            <!-- webp -->
+            <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/WEBP.gif" alt="don't use webp, just use png!">
+
             <!-- Atheist -->
             <img src="https://raw.githubusercontent.com/Kirito139/buttons/refs/heads/main/88x31/Area51_Cavern_1263_tna3.gif" alt="Atheist">
 
@@ -276,7 +319,7 @@ And the client exclaimed with a snarl and a taunt
             </a>
 
         </div>
-        <p>This site was made using raw html, css, and javascript with the help of <a href="https://perplexity.com" style="color: inherit;">Perplexity</a> and a large dose of procrastination.</p>
+        <p>This site was wrought from raw html, css, and javascript with the help of <a href="https://perplexity.com" style="color: inherit;">Perplexity</a> and a large dose of procrastination.</p>
         <p>·</p>
         <p><a href="changelog.html" style="color: inherit;">Changelog</a>
         </p>
