--- a/changelog.html
+++ b/changelog.html
@@ -7,16 +7,17 @@
     <body>
         <pre style="word-wrap: break-word; white-space: pre-wrap;">
         # Changelog
-        [v0.1.8] - November 14, 2024: Changed background to pure black, text to terminal green. Removed Strava widget. Made swatch clock link to source. Add crt overlay. Cool sites added: dimden, leia_uwu, nano. Update geek code, fix preserve button. Reformat footer, remove copyright. Move swatch time and imood to sidebar. Add site rating image in sidebar.
-        [v0.1.7] - November 6, 2024: Change to amber theme and add site rating button (currently not yet rated).
-        [v0.1.6] - November 5, 2024: Disabled antialiasing for images in body, added imood and swatch time. Also added cool sites section. Created index.js file.
-        [v0.1.5] - November 3, 2024: Removed boba manor, added geekring button. Changed to green retro terminal inspired colorscheme but left passable christams colors in comments in case I ever want to switch back. Added night before implementation poem, changed english header font to Terminess Nerd Font and chinese header font to Zpix, body font to ProggyClean Nerd Font, pre font to GohuFont uni11 Nerd Font(currently just the night before implementation poem uses this) and footer font to Silkscreen. Also added a smilies emoticon, and moved underconstruction sign to right before poem, after about me.
-        [v0.1.4] - November 2, 2024: Christmas Neko and colorscheme. More buttons!
-        [v0.1.3] - October 30, 2024: Fixed sizing bugs with strava and lastfm widgets, added hackclub webring, added geek code, added hack club spooky boba manor. Also added neko!
-        [v0.1.2] - October 29, 2024: Added email, contrachrome.
-        [v0.1.1] - October 28, 2024: Moar buttons!
-        [v0.1.0] - October 27, 2024: Added styles.css, changelog, buttons, construction sign, strava and lastfm widgets, name, welcome message.
-        [v0.0.1] - September 29, 2024: Added index.html, site first deployed to github pages with "Hello world!" message.
+        [v0.1.9] - November 16, 12024: Add guestbook,change main text to electric blue while leaving pre formatted text terminal green. Remove construction sign, about me (now quick facts). Add little email icon/button. MOar 88x31 buttons!
+        [v0.1.8] - November 14, 12024: Changed background to pure black, text to terminal green. Removed Strava widget. Made swatch clock link to source. Add crt overlay. Cool sites added: dimden, leia_uwu, nano. Update geek code, fix preserve button. Reformat footer, remove copyright. Move swatch time and imood to sidebar. Add site rating image in sidebar.
+        [v0.1.7] - November 6, 12024: Change to amber theme and add site rating button (currently not yet rated).
+        [v0.1.6] - November 5, 12024: Disabled antialiasing for images in body, added imood and swatch time. Also added cool sites section. Created index.js file.
+        [v0.1.5] - November 3, 12024: Removed boba manor, added geekring button. Changed to green retro terminal inspired colorscheme but left passable christams colors in comments in case I ever want to switch back. Added night before implementation poem, changed english header font to Terminess Nerd Font and chinese header font to Zpix, body font to ProggyClean Nerd Font, pre font to GohuFont uni11 Nerd Font(currently just the night before implementation poem uses this) and footer font to Silkscreen. Also added a smilies emoticon, and moved underconstruction sign to right before poem, after about me.
+        [v0.1.4] - November 2, 12024: Christmas Neko and colorscheme. More buttons!
+        [v0.1.3] - October 30, 12024: Fixed sizing bugs with strava and lastfm widgets, added hackclub webring, added geek code, added hack club spooky boba manor. Also added neko!
+        [v0.1.2] - October 29, 12024: Added email, contrachrome.
+        [v0.1.1] - October 28, 12024: Moar buttons!
+        [v0.1.0] - October 27, 12024: Added styles.css, changelog, buttons, construction sign, strava and lastfm widgets, name, welcome message.
+        [v0.0.1] - September 29, 12024: Added index.html, site first deployed to github pages with "Hello world!" message.
         </pre>
     </body>
 </html>
