Fix guestbook link

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ And the client exclaimed with a snarl and a taunt
             <br>
             I'm feeling<a href="https://www.imood.com/users/kirito139"><img src="https://moods.imood.com/display/uname-kirito139/fg-FFCC02/bg-282828/trans-1/imood.gif" alt="The current mood of kirito139 at www.imood.com" border="0"></a>
             <br>
-            Sign my <a href="kirito139.atabook.org" style="color: inherit;">guestbook!</a>
+            Sign my <a href="https://kirito139.atabook.org" style="color: inherit;">guestbook!</a>
             </p>
             <a href="https://www.mabsland.com/Adoption.html">
                 <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/images/Censor_NYRb.gif" alt="Site not yet rated.">
