Add cobalt ring

--- a/changelog.html
+++ b/changelog.html
@@ -7,6 +7,7 @@
     <body>
         <pre style="word-wrap: break-word; white-space: pre-wrap;">
         # Changelog
+        [v0.1.10] - November 19, 12024: Add cobalt webring.
         [v0.1.9a] - November 17, 12024: Fix guestbook link
         [v0.1.9] - November 16, 12024: Add guestbook,change main text to electric blue while leaving pre formatted text terminal green. Remove construction sign, about me (now quick facts). Add little email icon/button. MOar 88x31 buttons!
         [v0.1.8] - November 14, 12024: Changed background to pure black, text to terminal green. Removed Strava widget. Made swatch clock link to source. Add crt overlay. Cool sites added: dimden, leia_uwu, nano. Update geek code, fix preserve button. Reformat footer, remove copyright. Move swatch time and imood to sidebar. Add site rating image in sidebar.
