--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ And the client exclaimed with a snarl and a taunt
             </map>
             </p>
            <img usemap="#badge-geekring" src="http://geekring.net/banner/geek_2.gif" alt="The Geekring">
+           <div id="cobaltWebring" style="text-align: center;"><a href="https://mae.wtf"><img style="image-rendering: pixelated;" alt="Previous" src="https://instances.hyper.lol/assets/img/cobalt_wr_prev.png"></a><a href="https://instances.hyper.lol/webring"><img style="image-rendering: pixelated;" alt="Badge: cobaltWebring webring" src="https://instances.hyper.lol/assets/img/cobalt_wr_home_animated.gif"></a><a href="https://spax.zone"><img style="image-rendering: pixelated;" alt="Random" src="https://instances.hyper.lol/assets/img/cobalt_wr_random.png"></a><a href="https://hyper.lol"><img style="image-rendering: pixelated;" alt="Next" src="https://instances.hyper.lol/assets/img/cobalt_wr_next.png"></a></div>
         </div>
         <p> Cool sites!</p>
         <div id="cool-sites" style="text-decoration: none;">
