--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ href="https://webneko.net">Neko</a></h1>
                 <p style="text-align: center;">Geek Code v3.12:<br>GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W+++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP? t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y</p>
         <!-- <img alt="Under construction" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/under_construction/AtAthensRhodes1319bookconstruction.gif"> -->
                 <p>Welcome to my little corner of the internet. Enjoy your stay!</p>
-                <p> Quick facts: <br> - Lowell HS Class of '27 <br> - Sports: XC/TF (currently dealing with shin splints <img style="display: inline;" alt="phpBB3_sad" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/phpBB2/icon_sad.gif"> ). <br> - Languages I know: English/Python (preferred), <a style="text-decoration: none; font-family: 'Zpix'; font-size: 12px; color: inherit;">中文</a>/Java (not preferred). <br> - I read a lot of SF/F, my favorite books are the <u>Stormlight Archive</u> by Brandon Sanderson and <u>Neuromancer</u> by William Gibson. <br> - I listen to a lot of metal, industrial, darkwave, etc. plus a smattering of other random stuff. Look to the right to see what I'm listening to right now! → </p>
+                <p> Quick facts: <br> - Affiliations: Lowell HS Class of '27, Hack Club, Flight Club Aerospace, Lowell Theater Tech. <br> - Sports: XC/TF (currently dealing with shin splints <img style="display: inline;" alt="phpBB3_sad" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/phpBB2/icon_sad.gif"> ). <br> - Languages I know: English/Python (preferred), <a style="text-decoration: none; font-family: 'Zpix'; font-size: 12px; color: inherit;">中文</a>/Java (not preferred). <br> - I read a lot of SF/F, my favorite books are the <u>Stormlight Archive</u> by Brandon Sanderson and <u>Neuromancer</u> by William Gibson. <br> - I listen to a lot of metal, industrial, darkwave, etc. plus a smattering of other random stuff. Look to the right to see what I'm listening to right now! → </p>
                 <br>
                 <pre>
 'TWAS THE NIGHT BEFORE IMPLEMENTATION
@@ -107,9 +107,11 @@ And the client exclaimed with a snarl and a taunt
             <br>
             Sign my <a href="https://kirito139.atabook.org" style="color: inherit;">guestbook!</a>
             </p>
+            <p style="color: red"> Site rated WEB-14 </p>
             <a href="https://www.mabsland.com/Adoption.html">
-                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/images/Censor_NYRb.gif" alt="Site not yet rated.">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/images/Censor_14a.gif" alt="Site rated WEB-14">
             </a>
+            <p style="font-size: 8px; font-family: 'Silkscreen'; color: red">For the above rude gesture, and as-of-yet nonexistent content.</p>
             <iframe class="lastfm-widget"
                     src="https://kirito139.github.io/lastfm_now_playing/index.html" 
                     allowtransparency="true"
