Add NavLink Ads

--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@ And the client exclaimed with a snarl and a taunt
             </a>
             <p style="font-size: 8px; font-family: 'Silkscreen'; color: red">For the above rude
             gesture, and as-of-yet nonexistent content.</p>
+            <iframe width="180" height="180" style="border:none"
+                src="https://dimden.neocities.org/navlink/" name="neolink"></iframe>
             <iframe class="lastfm-widget"
                 src="https://kirito139.github.io/lastfm_now_playing/index.html"
                 allowtransparency="true" scrolling="no" width="220" height="340"
