--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@ And the client exclaimed with a snarl and a taunt
             <br>
             Sign my <a href="https://kirito139.atabook.org" style="color: inherit;">guestbook!</a>
             </p>
+            <iframe src="https://incr.easrng.net/badge?key=changeme" style="background:
+                url(//incr.easrng.net/bg.gif)" title="increment badge" width="88" height="31"
+                frameborder="0"></iframe>
             <p style="color: red"> Site rated WEB-14 </p>
             <a href="https://www.mabsland.com/Adoption.html">
                 <img
