Status cafe, thetridentguy

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@ href="https://webneko.net">Neko</a></h1>
             <main>
                 <p style="text-align: center;">
                 Geek Code v3.12:<br>
-                GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W+++ N o? K w--- O? M++
-                V? PS++ PE- Y+ PGP? t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y
+                GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W+++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP?
+                t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y
                 </p>
-                <p>Welcome to my little corner of the internet. Enjoy your
-                stay!</p>
+                <p>Welcome to my little corner of the internet. Enjoy your stay!</p>
                 <p> Quick facts: <br> - Affiliations: Lowell HS Class of '27, Hack Club, Flight Club
                 Aerospace, Lowell Theater Tech. <br> - Sports: XC/TF (currently dealing with shin
                    splints <img style="display: inline;" alt="phpBB3_sad"
@@ -147,13 +146,16 @@ And the client exclaimed with a snarl and a taunt
             </a>
             <p style="font-size: 8px; font-family: 'Silkscreen'; color: red">For the above rude
             gesture, and as-of-yet nonexistent content.</p>
-            <iframe width="180" height="180" style="border:none"
-                src="https://dimden.neocities.org/navlink/" name="neolink"></iframe>
+            <div id="statuscafe"><div id="statuscafe-username"></div><div
+                    id="statuscafe-content"></div></div><script
+                    src="https://status.cafe/current-status.js?name=kirito139" defer></script>
             <iframe class="lastfm-widget"
                 src="https://kirito139.github.io/lastfm_now_playing/index.html"
                 allowtransparency="true" scrolling="no" width="220" height="340"
                 style="border:none;">
             </iframe>
+            <iframe width="180" height="180" style="border:none"
+                src="https://dimden.neocities.org/navlink/" name="neolink"></iframe>
             <p> Some cool games:<br>
             - <a href="https://survev.io/" style="color: inherit !important;">survev.io</a><br>
             - <a href="https://sevencrane.itch.io/vapor-trails" style="color: inherit
@@ -194,11 +196,14 @@ And the client exclaimed with a snarl and a taunt
         </div>
         <p> Cool sites!</p>
         <div id="cool-sites" style="text-decoration: none;">
+            <p><a href="http://thetridentguy.xyz/" style="color: inherit">TheTridentGuy</a></p>
             <a href="https://tertiaryapocalypse.neocities.org" style="text-decoration: none;">
                 <img
                 src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/tertiaryapocalypse.png"
                 alt="tertiaryapocalypse site button">
             </a>
+            <a href="https://velvetblue.neocities.org"><img
+                src="https://files.catbox.moe/vltthb.png" alt="Velvet Blue"></a>
             <a href="https://nano.lgbt/"><img
                 src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/nano.png"
                 style="text-decoration: none;"></a>
