--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script>NekoType="holiday"</script>
     <h1 id=nl><script src="https://webneko.net/n20171213.js"></script><a 
 href="https://webneko.net">Neko</a></h1>
+    <br>
+    <p>↑click me</p>
     <div class="container">
         <div class="main-content">
             <header>
@@ -31,9 +33,7 @@ href="https://webneko.net">Neko</a></h1>
                 </p>
                 <p>Welcome to my little corner of the internet. Enjoy your stay!</p>
                 <p> Quick facts: <br> - Affiliations: Lowell HS Class of '27, Hack Club, Flight Club
-                Aerospace, Lowell Theater Tech. <br> - Sports: XC/TF (currently dealing with shin
-                   splints <img style="display: inline;" alt="phpBB3_sad"
-                   src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/phpBB2/icon_sad.gif">).
+                Aerospace, Lowell Theater Tech. <br> - Sports: XC/TF.
                    <br> - Languages I know: English/Python (preferred), <a style="text-decoration:
                                                                                   none; font-family:
                                                                                   'Zpix'; font-size:
