Remove 'look to the right' thing.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <script>NekoType="holiday"</script>
     <h1 id=nl><script src="https://webneko.net/n20171213.js"></script><a 
 href="https://webneko.net">Neko</a></h1>
-    <br>
-    <p>↑click me</p>
     <div class="container">
         <div class="main-content">
             <header>
@@ -41,8 +39,7 @@ href="https://webneko.net">Neko</a></h1>
                    中文</a>/Java (not preferred). <br> - I read a lot of SF/F, my favorite books are
                the <u>Stormlight Archive</u> by Brandon Sanderson and <u>Neuromancer</u> by William
                Gibson. <br> - I listen to a lot of metal, industrial, darkwave, etc. plus a
-               smattering of other random stuff. Look to the right to see what I'm listening to
-               right now! → </p>
+               smattering of other random stuff.</p>
                 <br>
                 <!-- wakatime languages pie chart -->
                 <a href="https://wakatime.com"><img
