Collapsible implementation poem.

--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@ href="https://webneko.net">Neko</a></h1>
                 <!-- wakatime languages pie chart -->
                 <a href="https://wakatime.com"><img
                     src="https://wakatime.com/share/@Kirito139/55e761bc-0cc6-4124-8e2c-921a564ff9f5.png"/></a>
-                <pre>
-'TWAS THE NIGHT BEFORE IMPLEMENTATION
+                <div class="implementation-container">
+                    <input type="checkbox" id="implementation-toggle" class="implementation-toggle">
+                    <label for="implementation-toggle" align="center">
+                        'TWAS THE NIGHT BEFORE IMPLEMENTATION
+                    </label>
+                <pre class="implementation-content">
 author unkown
 
 'Twas the night before implementation and all through the house
@@ -96,22 +100,9 @@ the clients last changes were even included.
 And the client exclaimed with a snarl and a taunt
 'IT'S JUST WHAT I ASKED FOR---BUT NOT WHAT I WANT!'
                 </pre>
-                <!-- Boba Manor: <a href="https://hack.club/boba-manor" style="color: inherit;
-                    text-decoration: none; display: inline-block;">For now, Open the Door...</a>
-                    <p><a href="https://hack.club/boba-manor"> <img alt="Enter if you dare"
-                src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/images/spooky-dark-theme_854605-5472.avif"></a></p>
-                -->
             </main>
         </div>
         <div class="sidebar">
-            <!-- <iframe class="strava-widget"
-                    height='454'
-                    width='300'
-                    frameborder='0'
-                    allowtransparency='true'
-                    scrolling='no'
-                    src='https://www.strava.com/athletes/134681589/latest-rides/1400cf29fec20dcea41557ff8fcaac0fa2b51402'>
-            </iframe> -->
             <p>Swatch time:
             <a href="https://wiki.melonland.net/swatch_time" style="color:
                 inherit; text-decoration: none;">
