--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,8 @@
     <body>
         <p style="word-wrap: break-word; white-space: pre-wrap;">
         # Changelog
-        12/29/2024: Removed shin splints thing, and "look to the right to see what I'm listening to".
+        12/29/2024: Removed shin splints thing, and "look to the right to see what I'm listening
+        to". Made implementation poem collapsible. <br>
         December 18, 12024: Moved some stuff around, added TheTridentGuy and Status Cafe. <br>
         [v0.1.11] - December 2, 12024: Added a proper web rating, may or may not have broken the
         font and cobalt webring. Also added a short list of games I like, and the wakatime languages
