--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Lennier Mulder</title>
 </head>
 <body>
-    <script>NekoType="holiday"</script>
+    <script>NekoType="black"</script>
     <h1 id=nl><script src="https://webneko.net/n20171213.js"></script><a 
 href="https://webneko.net">Neko</a></h1>
     <div class="container">
