undo hoidbringer change for merge

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ href="https://webneko.net">Neko</a></h1>
     <div class="container">
         <div class="main-content">
             <header>
-                <h1>hoidbringer</h1>
+                <h1>Lennier Mulder</h1>
                 <p style = "font-size: 22px;">朱晓瑞</p>
                 <p style="font-family: var(--main-font);">Kirito139 ·
                 roguewielder</p>
@@ -43,8 +43,6 @@ href="https://webneko.net">Neko</a></h1>
                Gibson. <br> - I listen to a lot of metal, industrial, darkwave, etc. plus a
                smattering of other random stuff. Look to the right to see what I'm listening to
                right now! → </p>
-                <p>- False hoidbringers (don't know them, but they're objectively inferior): @hoidbringer on instagram, u/hoidbringer on
-                reddit, hoidbringer on Archive of Our Own.</p>
                 <br>
                 <!-- wakatime languages pie chart -->
                 <a href="https://wakatime.com"><img
