--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
-    <title>Lennier Mulder</title>
+    <title>hoidbringer's noodle shop</title>
 </head>
 <body>
     <script>NekoType="black"</script>
@@ -14,12 +14,12 @@ href="https://webneko.net">Neko</a></h1>
     <div class="container">
         <div class="main-content">
             <header>
-                <h1>Lennier Mulder</h1>
+                <h1>hoidbringer</h1>
                 <p style = "font-size: 22px;">朱晓瑞</p>
                 <p style="font-family: var(--main-font);">Kirito139 ·
                 roguewielder</p>
                 <p style="font-family: var(--main-font);">San Francisco, CA</p>
-                <a href="mailto:lenniermulder@icloud.com" style="align-self: center;
+                <a href="mailto:lmulder@duck.com" style="align-self: center;
                     text-decoration: none; color: inherit;"><img alt="Email"
                     src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/mail.png"></a>
             </header>
@@ -29,7 +29,8 @@ href="https://webneko.net">Neko</a></h1>
                 GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W+++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP?
                 t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y
                 </p>
-                <p>Welcome to my little corner of the internet. Enjoy your stay!</p>
+                <p>Welcome to my little corner of the internet. Enjoy your stay! (this site is a
+                major wip)</p>
                 <p> Quick facts: <br> - Affiliations: Lowell HS Class of '27, Hack Club, Flight Club
                 Aerospace, Lowell Theater Tech. <br> - Sports: XC/TF.
                    <br> - Languages I know: English/Python (preferred), <a style="text-decoration:
