added icons for games, needs size tweakage

--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@ And the client exclaimed with a snarl and a taunt
             <iframe width="180" height="180" style="border:none"
                 src="https://dimden.neocities.org/navlink/" name="neolink"></iframe>
             <p> Some cool games:<br>
-            - <a href="https://survev.io/" style="color: inherit !important;">survev.io</a><br>
-            - <a href="https://sevencrane.itch.io/vapor-trails" style="color: inherit
+            - <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/survev.ico"><a href="https://survev.io/" style="color: inherit !important;">survev.io</a><br>
+            - <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/nbwJLZ.png"><a href="https://sevencrane.itch.io/vapor-trails" style="color: inherit
                 !important;">Vapor Trails</a><br>
-            - <a href="https://warbrokers.io" style="color: inherit !important;">War Brokers</a><br>
-            - <a href="https://ev.io" style="color: inherit !important;">ev.io</a><br>
-            - <a href="https://endless-sky.github.io" style="color: inherit !important;">Endless
+            - <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/warbrokers.ico"><a href="https://warbrokers.io" style="color: inherit !important;">War Brokers</a><br>
+            - <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/ev-io.png"><a href="https://ev.io" style="color: inherit !important;">ev.io</a><br>
+            - <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/endless-sky.ico"><a href="https://endless-sky.github.io" style="color: inherit !important;">Endless
                 Sky</a><br>
             - <a href="https://hypersomnia.xyz/" style="color: inherit
                 !important;">Hypersomnia</a></p>
@@ -197,6 +197,8 @@ And the client exclaimed with a snarl and a taunt
             <a href="https://nano.lgbt/"><img
                 src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/nano.png"
                 style="text-decoration: none;"></a>
+            <a href="https://kirsvantas.com" target="_blank"><img src="/local/path/to/button.gif"
+                alt="https://kirsvantas.com"></a>
             <a href="https://dimden.dev/"><img
                 src="https://dimden.dev/services/images/88x31.gif"></a> <p>
             <a href="https://web.archive.org/web/20241003071517/https://leia.pages.gay/"
