Fix velvet blue button

--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@ And the client exclaimed with a snarl and a taunt
                 alt="tertiaryapocalypse site button">
             </a>
             <a href="https://velvetblue.neocities.org"><img
-                src="https://files.catbox.moe/vltthb.png" alt="Velvet Blue"></a>
+                src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/velvet_blue.png"
+                alt="Velvet Blue"></a>
             <a href="https://nano.lgbt/"><img
                 src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/nano.png"
                 style="text-decoration: none;"></a>
