--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>hoidbringer's noodle shop</title>
 </head>
 <body>
+    <!-- You can use this URL, or download it and check it into your own project -->
+    <script src="https://unpkg.com/webamp@1.4.0/built/webamp.bundle.min.js"></script>
     <script>NekoType="black"</script>
     <h1 id=nl><script src="https://webneko.net/n20171213.js"></script><a 
 href="https://webneko.net">Neko</a></h1>
@@ -24,6 +26,7 @@ href="https://webneko.net">Neko</a></h1>
                     text-decoration: none; color: inherit;"><img alt="Email"
                     src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/mail.png"></a>
             </header>
+            <div id="winamp-container"></div>
             <main>
                 <p style="text-align: center;">
                 Geek Code v3.12:<br>
