--- a/index.html
+++ b/index.html
@@ -6,11 +6,50 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="index.js"></script>
+    <script src="https://unpkg.com/webamp@1.4.0/built/webamp.bundle.min.js"></script>
     <title>hoidbringer's noodle shop</title>
 </head>
 <body>
     <!-- You can use this URL, or download it and check it into your own project -->
-    <script src="https://unpkg.com/webamp@1.4.0/built/webamp.bundle.min.js"></script>
+    <div id="winamp-container"></div>
+    <script>
+        // import Webamp from 'webamp';
+
+        // Or, if you installed via a script tag, `Winamp` is available on the global `window`:
+        const Winamp = window.Webamp;
+
+        // Check if Winamp is supported in this browser
+        if(!Webamp.browserIsSupported()) {
+            alert("Oh no! Webamp does not work!")
+            throw new Error("What's the point of anything?")
+        }
+
+        // All configuration options are optional.
+        const webamp = new Webamp({
+            // Optional.
+            initialTracks: [{
+                metaData: {
+                    artist: "DJ Mike Llama",
+                    title: "Llama Whippin' Intro",
+                },
+                // NOTE: Your audio file must be served from the same domain as your HTML
+                // file, or served with permissive CORS HTTP headers:
+                // https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS
+                // Can be downloaded from: https://github.com/captbaritone/webamp/raw/master/mp3/llama-2.91.mp3
+                url: "https://kirito139.github.io/llama-2.91.mp3"
+            }],
+            // Optional. The default skin is included in the js bundle, and will be loaded by default.
+            initialSkin: {
+                // NOTE: Your skin file must be served from the same domain as your HTML
+                // file, or served with permissive CORS HTTP headers:
+                // https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS
+                // Can be downloaded from https://github.com/captbaritone/webamp/raw/master/skins/TopazAmp1-2.wsz
+                url: "./TopazAmp1-2.wsz"
+            },
+        });
+        // Render after the skin has loaded.
+        webamp.renderWhenReady(document.getElementById('winamp-container'));
+    </script>
     <script>NekoType="black"</script>
     <h1 id=nl><script src="https://webneko.net/n20171213.js"></script><a 
 href="https://webneko.net">Neko</a></h1>
@@ -26,7 +65,6 @@ href="https://webneko.net">Neko</a></h1>
                     text-decoration: none; color: inherit;"><img alt="Email"
                     src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/mail.png"></a>
             </header>
-            <div id="winamp-container"></div>
             <main>
                 <p style="text-align: center;">
                 Geek Code v3.12:<br>
