Move skins to stash, add song

--- a/index.html
+++ b/index.html
@@ -36,15 +36,22 @@
                 // file, or served with permissive CORS HTTP headers:
                 // https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS
                 // Can be downloaded from: https://github.com/captbaritone/webamp/raw/master/mp3/llama-2.91.mp3
-                url: "https://kirito139.github.io/llama-2.91.mp3"
-            }],
+                url: "./llama-2.91.mp3"
+            }
+                {
+                    metaData: {
+                        artist: "Owl City",
+                            title: "Vanilla Twilight",
+                    },
+                        url: "./vanilla_twilight.m4a"
+            ],
             // Optional. The default skin is included in the js bundle, and will be loaded by default.
             initialSkin: {
                 // NOTE: Your skin file must be served from the same domain as your HTML
                 // file, or served with permissive CORS HTTP headers:
                 // https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS
-                // Can be downloaded from https://github.com/captbaritone/webamp/raw/master/skins/TopazAmp1-2.wsz
-                url: "./TopazAmp1-2.wsz"
+                // Topaz can be downloaded from https://github.com/captbaritone/webamp/raw/master/skins/TopazAmp1-2.wsz
+                url: "https://github.com/Kirito139/stash/raw/refs/heads/main/webamp_skins/Mac_OS_X_-_Aqua.wsz"
             },
         });
         // Render after the skin has loaded.
